--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500&display=swap');
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +11,22 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+*{
+  margin:0;
+}
+::-webkit-scrollbar {
+  width: 0.5px!important;
+  height: 6px!important;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255,255,255,.16);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(255,255,255,.1);
+}
+
+ ::-webkit-scrollbar-track {
+  background-color: initial;
 }
