--- a/src/login/Login.css
+++ b/src/login/Login.css
@@ -21,9 +21,13 @@
 
 }
 
-.login__container button {
+/* .login__container button {
     margin-top: 50px;
     text-transform: inherit !important;
     background-color: #0fb45c;
     color: white;
 }
+ button :hover {
+    background-color: #0fb45c;
+    color: white;
+} */
