--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,12 @@ margin-top: -30px;
   box-shadow: -1px 4px 20px -6px rgba(0,0,0,0.75);
 }
 /* #1d6f70 outgoing message */
+@media (max-width:628px){
+  .chat__body{
+    display: flex;
+  height: 100vh;
+  margin: 0 !important;
+  width: 100vw;
+  overflow-y: hidden;
+}
+}
