--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ margin-top: -30px;
   width: 90vw;
   height: 90vh;
   box-shadow: -1px 4px 20px -6px rgba(0,0,0,0.75);
+  overflow-y: hidden;
 }
 /* #1d6f70 outgoing message */
 @media (max-width:628px){
