--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   place-items: center;
   background-color: #090e11;
   color: #f1f1f2eb;
-  font-family: "Mulish";
+  font-family: "Open sans";
   height: 100vh;
 }
 .chat__body{
