--- a/src/sidebar/sidebar.css
+++ b/src/sidebar/sidebar.css
@@ -54,7 +54,7 @@
 }
 
 .Sidebar__searchContainer > input{
-    font-family: "Mulish";
+    font-family: "Open sans";
     border:0;
     border-radius: 20px;    
     /* padding: 10px; */
