--- a/src/sidebar/sidebarchat.css
+++ b/src/sidebar/sidebarchat.css
@@ -1,7 +1,6 @@
 .Sidebarchat{
 display: flex;
 padding: 15px;
-
 border-bottom:1px solid rgb(48, 48, 48);
 border-right:1px solid rgb(48, 48, 48);
 }
@@ -20,8 +19,9 @@ color: #f1f1f2eb;
 }
 .SidebarChat_info > p{
     font-size: 15px;
-    max-width: 30vw;
+    max-width: 15vw;
     white-space: nowrap;
+    text-overflow: emphasis;
     overflow: hidden;
     color: #f1f1f2a1;
     }
