--- a/src/chat/Chat.css
+++ b/src/chat/Chat.css
@@ -1,116 +1,117 @@
-.Chat{
-    display: flex;
-    flex: 0.70;
-    flex-direction: column;
-    /* background-color: lightgray; */
+.Chat {
+  display: flex;
+  flex: 0.7;
+  flex-direction: column;
+  /* background-color: lightgray; */
 }
-.Chat__header{
-    display: flex;
-    align-items: center;
-    padding: 10px 16px;
-    height:40px;
-    border-bottom:1px solid rgb(48, 48, 48);
+.Chat__header {
+  display: flex;
+  align-items: center;
+  padding: 10px 16px;
+  height: 40px;
+  border-bottom: 1px solid rgb(48, 48, 48);
 }
-.Chat__headerinfo{
-flex: 1;
-padding-left: 20px;
+.Chat__headerinfo {
+  flex: 1;
+  padding-left: 20px;
 }
-.Chat__headerinfo > h3{
-margin-bottom: 3px;
-font-size: 16px;
-font-weight: 900;
-color:#f1f1f2eb ;
-    }
-.Chat__headerinfo > p{
-    color:#f1f1f2a1 ;
-    font-size: 12px;
-     }
+.Chat__headerinfo > h3 {
+  margin-bottom: 3px;
+  font-size: 16px;
+  font-weight: 900;
+  color: #f1f1f2eb;
+}
+.Chat__headerinfo > p {
+  color: #f1f1f2a1;
+  font-size: 12px;
+}
 
-.Chat_headerright{
-    display: flex;
-    justify-content: space-between;
-    min-width: 100px;
+.Chat_headerright {
+  display: flex;
+  justify-content: space-between;
+  min-width: 100px;
 }
-.Chat__body{
-    background-image:url(./whatsapp.png);
-/* background-position: center; */
-background-repeat: repeat;
-padding-right: 9%;
-padding-left: 9%;
-padding-top: 12px;
-overflow: scroll;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
+.Chat__body {
+  background-image: url(./whatsapp.png);
+  /* background-position: center; */
+  background-repeat: repeat;
+  padding-right: 9%;
+  padding-left: 9%;
+  padding-top: 12px;
+  overflow: scroll;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
 }
-.Chat__Messages{
-position: relative;
-font-size: 16px;
-padding: 19px 65px 13px 16px;
-border-radius: 6px;
-margin-top: 2px;
-max-width: 40vw;
-width: fit-content;
-color:#f1f1f2eb ;
-background-color: #323739;
-margin-bottom: 30px;
-overflow-wrap: anywhere;
-
+.Chat__Messages {
+  border-radius: 5px 20px 30px 40px;
+  position: relative;
+  font-size: 16px;
+  padding: 22px 78px 14px 17px;
+  margin-top: 2px;
+  max-width: 40vw;
+  width: fit-content;
+  color: #f1f1f2eb;
+  background-color: #323739;
+  margin-bottom: 30px;
+  overflow-wrap: anywhere;
 }
-.Chat__Reciver{
-   margin-left: auto;
-
-    color:#f1f1f2eb ;
-    background-color: #1d6f70;
-    margin-bottom: 30px;
-    
-    }
-.Chat__footer{
-    background-color: #1e2428;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 62px;
-    border-top: 1px solid rgb(48, 48, 48);
+.Chat__Reciver {
+  margin-left: auto;
+  border-radius: 40px 0px 40px 20px;
+  color: #f1f1f2eb;
+  background-color: #1d6f70;
+  margin-bottom: 30px;
 }
-.Chat__footer > form{
-    flex: 1;
-    display: flex;
-    /* flex-direction: column; */
+.Chat__footer {
+  background-color: #1e2428;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 62px;
+  border-top: 1px solid rgb(48, 48, 48);
 }
-.Chat__footer > form >input{
-    flex: 1;
-    display: flex;
-    border-radius: 30px;
-    padding: 9px 12px 11px;
-    background-color: #33383b;
-    border: 1px solid #33383b;
-    font-family: 'Open sans';
-    color: #f1f1f2eb;
+.Chat__footer > form {
+  flex: 1;
+  display: flex;
+  /* flex-direction: column; */
 }
-.Chat__footer > form >button{
+.Chat__footer > form > input {
+  flex: 1;
+  display: flex;
+  border-radius: 30px;
+  padding: 9px 12px 11px;
+  background-color: #33383b;
+  border: 1px solid #33383b;
+  font-family: "Open sans";
+  color: #f1f1f2eb;
+}
+.Chat__footer > form > button {
   display: none;
 }
-.Chat__Name{
-    position: absolute;
-    margin-top:-13px ;
-    margin-left:0px;
-    padding-bottom: 2px;
-    font-weight: 800;
-    font-size: 12px;
-    color: #6bcbef;
-  
+.Chat__Name {
+  position: absolute;
+  margin-top: -13px;
+  margin-left: 0px;
+  padding-bottom: 2px;
+  font-weight: 800;
+  font-size: 12px;
+  color: #6bcbef;
 }
 
-.Chat__Time{
-    color:#f1f1f2a1 ;
-    font-weight: 800;
-    margin-top:6px ;
-    padding-top: 5px;
-    position: relative;
-    margin-left: 24px;
-    font-size: 12px;
-    position: absolute;
+.Chat__Time {
+  color: #f1f1f2a1;
+  font-weight: 800;
+  vertical-align: top;
+  height: 15px;
+  font-size: 11px;
+  line-height: 15px;
+  white-space: nowrap;
+  margin-top: 6px;
+  padding-top: 5px;
+  /* position: relative; */
+  margin-left: 15px;
+  position: absolute;
 }
 /* .emoji-mart {
     position: absolute !important;
@@ -119,7 +120,6 @@ overflow-wrap: anywhere;
     left: 0;
     width: 30vw !important;
 } */
-
 
 /* emoji */
 .emoji-mart,
@@ -172,13 +172,15 @@ overflow-wrap: anywhere;
   text-align: center;
   padding: 12px 4px;
   overflow: hidden;
-  transition: color .1s ease-out;
+  transition: color 0.1s ease-out;
   margin: 0;
   box-shadow: none;
   background: none;
   border: none;
 }
-.emoji-mart-anchor:focus { outline: 0 }
+.emoji-mart-anchor:focus {
+  outline: 0;
+}
 .emoji-mart-anchor:hover,
 .emoji-mart-anchor:focus,
 .emoji-mart-anchor-selected {
@@ -191,8 +193,10 @@ overflow-wrap: anywhere;
 
 .emoji-mart-anchor-bar {
   position: absolute;
-  bottom: -3px; left: 0;
-  width: 100%; height: 3px;
+  bottom: -3px;
+  left: 0;
+  width: 100%;
+  height: 3px;
   background-color: #464646;
 }
 
@@ -240,9 +244,9 @@ overflow-wrap: anywhere;
 .emoji-mart-search input::-webkit-search-results-decoration {
   /* remove webkit/blink styles for <input type="search">
    * via https://stackoverflow.com/a/9422689 */
-   color: #fff;
-   border-color: #555453;
-   background-color: #222;
+  color: #fff;
+  border-color: #555453;
+  background-color: #222;
   -webkit-appearance: none;
 }
 
@@ -267,8 +271,10 @@ overflow-wrap: anywhere;
   z-index: 0;
   content: "";
   position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   color: #fff;
   border-color: #555453;
   background-color: #222;
@@ -291,7 +297,6 @@ overflow-wrap: anywhere;
   color: #fff;
   border-color: #555453;
   background-color: #222;
- 
 }
 
 .emoji-mart-category-list {
@@ -337,7 +342,7 @@ overflow-wrap: anywhere;
   display: none;
 }
 .emoji-mart-no-results .emoji-mart-no-results-label {
-  margin-top: .2em;
+  margin-top: 0.2em;
 }
 .emoji-mart-no-results .emoji-mart-emoji:hover:before {
   content: none;
@@ -361,7 +366,8 @@ overflow-wrap: anywhere;
 }
 
 .emoji-mart-preview-data {
-  left: 68px; right: 12px;
+  left: 68px;
+  right: 12px;
   word-break: break-all;
 }
 
@@ -386,7 +392,7 @@ overflow-wrap: anywhere;
 .emoji-mart-preview-shortname + .emoji-mart-preview-shortname,
 .emoji-mart-preview-shortname + .emoji-mart-preview-emoticon,
 .emoji-mart-preview-emoticon + .emoji-mart-preview-emoticon {
-  margin-left: .5em;
+  margin-left: 0.5em;
 }
 
 .emoji-mart-preview-emoticon {
@@ -404,7 +410,7 @@ overflow-wrap: anywhere;
 }
 
 .emoji-mart-title-label {
-  color: #999A9C;
+  color: #999a9c;
   font-size: 26px;
   font-weight: 300;
 }
@@ -433,7 +439,7 @@ overflow-wrap: anywhere;
 }
 
 .emoji-mart-skin-swatches.opened .emoji-mart-skin-swatch.selected:after {
-  opacity: .75;
+  opacity: 0.75;
 }
 
 .emoji-mart-skin-swatch {
@@ -441,16 +447,28 @@ overflow-wrap: anywhere;
   width: 0;
   vertical-align: middle;
   transition-property: width, padding;
-  transition-duration: .125s;
+  transition-duration: 0.125s;
   transition-timing-function: ease-out;
 }
 
-.emoji-mart-skin-swatch:nth-child(1) { transition-delay: 0s }
-.emoji-mart-skin-swatch:nth-child(2) { transition-delay: .03s }
-.emoji-mart-skin-swatch:nth-child(3) { transition-delay: .06s }
-.emoji-mart-skin-swatch:nth-child(4) { transition-delay: .09s }
-.emoji-mart-skin-swatch:nth-child(5) { transition-delay: .12s }
-.emoji-mart-skin-swatch:nth-child(6) { transition-delay: .15s }
+.emoji-mart-skin-swatch:nth-child(1) {
+  transition-delay: 0s;
+}
+.emoji-mart-skin-swatch:nth-child(2) {
+  transition-delay: 0.03s;
+}
+.emoji-mart-skin-swatch:nth-child(3) {
+  transition-delay: 0.06s;
+}
+.emoji-mart-skin-swatch:nth-child(4) {
+  transition-delay: 0.09s;
+}
+.emoji-mart-skin-swatch:nth-child(5) {
+  transition-delay: 0.12s;
+}
+.emoji-mart-skin-swatch:nth-child(6) {
+  transition-delay: 0.15s;
+}
 
 .emoji-mart-skin-swatch.selected {
   position: relative;
@@ -461,8 +479,10 @@ overflow-wrap: anywhere;
 .emoji-mart-skin-swatch.selected:after {
   content: "";
   position: absolute;
-  top: 50%; left: 50%;
-  width: 4px; height: 4px;
+  top: 50%;
+  left: 50%;
+  width: 4px;
+  height: 4px;
   margin: -2px 0 0 -2px;
   color: #fff;
   border-color: #555453;
@@ -470,7 +490,7 @@ overflow-wrap: anywhere;
   border-radius: 100%;
   pointer-events: none;
   opacity: 0;
-  transition: opacity .2s ease-out;
+  transition: opacity 0.2s ease-out;
 }
 
 .emoji-mart-skin-swatch.custom {
@@ -480,7 +500,7 @@ overflow-wrap: anywhere;
   overflow: hidden;
   vertical-align: middle;
   transition-property: width, height;
-  transition-duration: .125s;
+  transition-duration: 0.125s;
   transition-timing-function: ease-out;
   cursor: default;
 }
@@ -509,8 +529,9 @@ overflow-wrap: anywhere;
   padding: 0 2px 0 0;
 }
 
-.emoji-mart-skin-swatches.custom.opened .emoji-mart-skin-swatch.custom.selected:after {
-  opacity: .75;
+.emoji-mart-skin-swatches.custom.opened
+  .emoji-mart-skin-swatch.custom.selected:after {
+  opacity: 0.75;
 }
 
 .emoji-mart-skin-text.opened {
@@ -523,7 +544,7 @@ overflow-wrap: anywhere;
   width: 95px;
   height: 40px;
   border-radius: 10%;
-  
+
   border-color: #555453;
   background-color: #222;
 }
@@ -536,12 +557,24 @@ overflow-wrap: anywhere;
   border-radius: 100%;
 }
 
-.emoji-mart-skin-tone-1 { background-color: #ffc93a }
-.emoji-mart-skin-tone-2 { background-color: #fadcbc }
-.emoji-mart-skin-tone-3 { background-color: #e0bb95 }
-.emoji-mart-skin-tone-4 { background-color: #bf8f68 }
-.emoji-mart-skin-tone-5 { background-color: #9b643d }
-.emoji-mart-skin-tone-6 { background-color: #594539 }
+.emoji-mart-skin-tone-1 {
+  background-color: #ffc93a;
+}
+.emoji-mart-skin-tone-2 {
+  background-color: #fadcbc;
+}
+.emoji-mart-skin-tone-3 {
+  background-color: #e0bb95;
+}
+.emoji-mart-skin-tone-4 {
+  background-color: #bf8f68;
+}
+.emoji-mart-skin-tone-5 {
+  background-color: #9b643d;
+}
+.emoji-mart-skin-tone-6 {
+  background-color: #594539;
+}
 
 /* For screenreaders only, via https://stackoverflow.com/a/19758620 */
 .emoji-mart-sr-only {
@@ -599,17 +632,16 @@ overflow-wrap: anywhere;
   color: #bfbfbf;
 }
 .emoji-mart {
-    position: absolute !important;
-    top: -1100%;
-    z-index: 999;
-    margin-left: 350px;
+  position: absolute !important;
+  top: -1100%;
+  z-index: 999;
+  margin-left: 350px;
 }
-@media(max-width:628px) {
-   
-    .Chat__header {
-        background-color: #323739;
-        width: -webkit-fill-available;
-        /* position: relative; */
-        padding: 7px;
-    }
+@media (max-width: 628px) {
+  .Chat__header {
+    background-color: #323739;
+    width: -webkit-fill-available;
+    /* position: relative; */
+    padding: 7px;
+  }
 }
