--- a/src/sidebar/sidebarchat.css
+++ b/src/sidebar/sidebarchat.css
@@ -1,28 +1,33 @@
-.Sidebarchat{
-display: flex;
-padding: 15px;
-border-bottom:1px solid rgb(48, 48, 48);
-border-right:1px solid rgb(48, 48, 48);
+.Sidebarchat {
+  display: flex;
+  padding: 15px;
+  border-bottom: 1px solid rgb(48, 48, 48);
+  border-right: 1px solid rgb(48, 48, 48);
 }
-.Sidebarchat>p{
-    display: flex;
-    /* padding: 15px; */
-    margin-left: 30%;
-    }
-.Sidebarchat:hover{
-    background-color:#2d3134;
-}
-.SidebarChat_info > h2{
-font-size: 16px;
-margin-bottom: 8px;
-color: #f1f1f2eb;
-}
-.SidebarChat_info > p{
-    font-size: 15px;
-    max-width: 15vw;
-    white-space: nowrap;
-    text-overflow: emphasis;
-    overflow: hidden;
-    color: #f1f1f2a1;
-    }
+/* .sidebarss {
+  display: flex;
+  padding: 15px;
+  border-bottom: 1px solid rgb(48, 48, 48);
+  border-right: 1px solid rgb(48, 48, 48);
+} */
+.Sidebarchat > p {
+  display: flex;
 
+  margin-left: 30%;
+}
+.Sidebarchat:hover {
+  background-color: #2d3134;
+}
+.SidebarChat_info > h2 {
+  font-size: 16px;
+  margin-bottom: 8px;
+  color: #f1f1f2eb;
+}
+.SidebarChat_info > p {
+  font-size: 15px;
+  max-width: 15vw;
+  white-space: nowrap;
+  text-overflow: emphasis;
+  overflow: hidden;
+  color: #f1f1f2a1;
+}
