--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 /* grid centrer */
-.chat{
+.chat {
   display: grid;
   place-items: center;
   background-color: #090e11;
@@ -7,23 +7,23 @@
   font-family: "Open sans";
   height: 100vh;
 }
-.chat__body{
+.chat__body {
   display: flex;
   border-radius: 4px;
   background-color: #2a2f32;
-margin-top: -30px;
+  margin-top: -30px;
   width: 90vw;
   height: 90vh;
-  box-shadow: -1px 4px 20px -6px rgba(0,0,0,0.75);
+  box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75);
   overflow-y: hidden;
 }
 /* #1d6f70 outgoing message */
-@media (max-width:628px){
-  .chat__body{
+@media (max-width: 628px) {
+  .chat__body {
     display: flex;
-  height: 100vh;
-  margin: 0 !important;
-  width: 100vw;
-  overflow-y: hidden;
-}
+    height: 100vh;
+    margin: 0 !important;
+    width: 100vw;
+    overflow-y: hidden;
+  }
 }
